# klit-flow

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: check.md
.claude/rules/: architecture.md
certs/: README.md
fixtures/mini_app/: .klit-flowignore  README.md  secret.kt
fixtures/mini_app/src/: AdminDashboardActivity.kt  AuthActivity.kt  AuthErrorActivity.kt  DashboardActivity.kt  MainActivity.kt  NavigationHelper.kt  NetworkErrorActivity.kt  PasswordExpiredActivity.kt  ProfileActivity.kt  SettingsActivity.kt  Utils.kt
release/v1.0/: klit_flow-1.0.0-py3-none-any.whl
release/v1.0.0/: klit_flow-1.0.0-py3-none-any.whl
release/v1.1.0/: klit_flow-1.1.0-py3-none-any.whl  manifest.json
release/v2.0.0/: klit_flow-2.0.0-py3-none-any.whl
src/klit_flow/: __init__.py  cli.py  config.py  monitor.py  named_flows.py  summarize.py  walker.py
src/klit_flow/emit/: json_emitter.py  markdown_emitter.py  mermaid_emitter.py
src/klit_flow/flows/: __init__.py  android.py  base.py  flutter.py  ios.py  react_native.py
src/klit_flow/graph/: model.py  resolver.py  store.py
src/klit_flow/index/: __init__.py  bm25.py  embeddings.py  search.py
tests/: conftest.py  test_cli_flows.py  test_cli_paths.py  test_cli_serve.py  test_emit.py  test_extractor_kotlin.py  test_flows_android.py  test_mcp_server.py  test_monitor.py  test_named_flows.py  test_resolver.py  test_search.py  test_store.py  test_summarize.py  test_walker.py  test_web_server.py
(+23 files in other folders)
