[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klit-flow"
version = "1.0.0"
description = "Local, offline code-intelligence tool for mobile app dependency and screen-flow graphs."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.3",
    "ladybug>=0.11",
    "networkx>=3.3",
    "sentence-transformers>=3.0",
    "pydantic>=2.7",
    "typer>=0.12",
    "rank-bm25>=0.2.2",
    "python-frontmatter>=1.1",
    "mcp>=1.0",
    "python-louvain>=0.16",
    "ollama>=0.3",
    "pathspec>=0.12",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.2",
]

[project.scripts]
klit-flow = "klit_flow.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# web_server.py embeds HTML/CSS/JS that cannot be split at 100 chars
"src/klit_flow/server/web_server.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
